--- a/{{ cookiecutter.repo_name }}/requirements.txt
+++ b/{{ cookiecutter.repo_name }}/requirements.txt
@@ -1,15 +1,5 @@
-# local package
--e .
-
 # external requirements
-click
-Sphinx
-coverage
-awscli
+pytest
+pytest-cov
 flake8
-python-dotenv>=0.5.1
-{% if cookiecutter.python_interpreter != 'python3' %}
-
-# backwards compatibility
-pathlib2
-{% endif %}
+python-dotenv
